added epic started dates

--- a/scripts/templates/report.hbs
+++ b/scripts/templates/report.hbs
@@ -12,7 +12,7 @@
     <tr>
       <td>{{link_to}}</td>
       <th>{{fields.summary}}</th>
-      <th></th>
+      <th>{{started_date}}</th>
       <th></th>
     </tr>
   
