added epic completed dates

--- a/scripts/templates/report.hbs
+++ b/scripts/templates/report.hbs
@@ -13,7 +13,7 @@
       <td>{{link_to}}</td>
       <th>{{fields.summary}}</th>
       <th>{{started_date}}</th>
-      <th></th>
+      <th>{{completed_date}}</th>
     </tr>
   
     {{#each issues}}
