reimplemented Issues By Epic report

--- a/scripts/templates/issue_row.hbs
+++ b/scripts/templates/issue_row.hbs
@@ -1,4 +1,4 @@
-<tr class="epic-row">
+<tr class="issue-row">
   <td>{{issue_link}}</td>
   <td>{{fields.summary}}</td>
   <td>{{date startedDate}}</td>
