started to add code for calculating cycle time

--- a/scripts/templates/epic_throughput/row.hbs
+++ b/scripts/templates/epic_throughput/row.hbs
@@ -2,5 +2,5 @@
     <th>{{date rowDate}}</th>
     <th>{{throughput}}</th>
     <th>{{workInProgress}}</th>
-    <th></th>
+    <th>{{cycleTime}}</th>
 </tr>
