--- a/scripts/templates/epic_throughput/table.hbs
+++ b/scripts/templates/epic_throughput/table.hbs
@@ -2,9 +2,9 @@
 
     <tr>
         <th>Week</th>
-        <th>Throughput</th>
+        <th>Throughput / wk</th>
         <th>WIP</th>
-        <th>Cycle Time</th>
+        <th>Cycle Time / wk</th>
     </tr>
 
 </table>
