rounded values in epic throughput report

--- a/scripts/templates/epic_throughput/row.hbs
+++ b/scripts/templates/epic_throughput/row.hbs
@@ -1,6 +1,6 @@
 <tr>
     <th>{{date rowDate}}</th>
     <th>{{throughput}}</th>
-    <th>{{workInProgress}}</th>
-    <th>{{cycleTime}}</th>
+    <th>{{round cycleTime}}</th>
+    <th>{{round workInProgress}}</th>
 </tr>
