--- a/scripts/templates/epics_by_sprint/sprint_report.hbs
+++ b/scripts/templates/epics_by_sprint/sprint_report.hbs
@@ -1,1 +1,20 @@
 <h3>{{sprint.name}}</h3>
+
+<table class="aui">
+  <tr>
+    <td>Issue</td>
+    <td>Summary</td>
+    <td>Epic</td>
+  </tr>
+  
+  {{#each contents.completedIssues}}
+  
+    <tr>
+      <td>{{issue_link}}</td>
+      <td>{{summary}}</td>
+      <td>{{epic}}</td>
+    </tr>
+  
+  {{/each}}
+
+</table>
