--- a/scripts/templates/epic_cycle_time/report.hbs
+++ b/scripts/templates/epic_cycle_time/report.hbs
@@ -4,7 +4,7 @@
     </p>
     <p>Sample duration:
         <input id="sample_duration">
-        <select id="sample_duration_unit">
+        <select id="sample_duration_units">
             <option value='days'>Days</option>
             <option value='weeks'>Weeks</option>
             <option value='months'>Months</option>
