removed tabindex from inline dialog

--- a/scripts/templates/inline_dialog.hbs
+++ b/scripts/templates/inline_dialog.hbs
@@ -1,5 +1,4 @@
-<div class="jira-reporting aui-inline-dialog ghx-inline-dialog"
-     style="display: block;" tabindex="9999">
+<div class="jira-reporting aui-inline-dialog ghx-inline-dialog" style="display: block;">
     <div class="contents" style="width: 300px;">
         <div class="ghx-inline-dialog-container">
             {{issue_link}}
