--- a/scripts/reports/templates/cycle_time_report.hbs
+++ b/scripts/reports/templates/cycle_time_report.hbs
@@ -13,6 +13,11 @@
             <option value='months'>Months</option>
         </select>
     </p>
+    <p>Jira filter:
+        <select id="jira_filter">
+            <option value="">None</option>
+        </select>
+    </p>
     <p>
         Exclusion filter:
         <input id="exclusion_filter">
