added created date filter to issues

--- a/scripts/reports/templates/issues_by_interval_options.hbs
+++ b/scripts/reports/templates/issues_by_interval_options.hbs
@@ -4,5 +4,14 @@
     </select>
 </p>
 
+<p>Sample duration:
+    <input id="sample_duration">
+    <select id="sample_duration_units">
+        <option value='days'>Days</option>
+        <option value='weeks'>Weeks</option>
+        <option value='months'>Months</option>
+    </select>
+</p>
+
 <div id="report">
 </div>
